Support Java 17 in addition to Java 25
Add a second build for machines that only have Java 17. The default build
still targets Java 25 (target/application.jar); building with -Pjava17
compiles with release 17 and writes target/java17/application-java17.jar.
Both come from the same source.

- Replace virtual threads, Thread.join(Duration) and ExecutorService
  try-with-resources (Java 19/21 APIs) with plain daemon threads
  (new common.Threads helper); the compiler now rejects newer APIs
- All 101 runtime dependencies already target Java 17 bytecode
- Document the two builds in README.md and REQUIREMENTS.md

165 tests pass in both builds. The Java 17 jar was started on JDK 25 only;
not yet run on a real Java 17 JVM.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>